# Chatbot

./: .gitignore  README.md  api_config.json  chatbot.py  document_loader.py  frontend.html  main.py  mock_data.json  mock_services.py  pyproject.toml  rag_engine.py  requirements.txt  server.py  tools.py
.github/workflows/: ci.yml
knowledge_base/: benefits_guide.txt  company_handbook.md
tests/: test_document_loader.py  test_mock_services.py  test_rag_engine.py  test_server.py  test_tools.py
